# async-wsocket

./: Cargo.toml  Makefile  README.md  justfile  rust-toolchain.toml
.github/workflows/: ci.yml
examples/: client.rs  hs-server.rs
src/: lib.rs  message.rs  prelude.rs  socket.rs  wasm.rs
src/native/: error.rs  mod.rs  socks.rs  stream.rs  tor.rs
src/wasm/: error.rs  event.rs  message.rs  mod.rs  socket.rs  state.rs  stream.rs
src/wasm/pharos/: mod.rs  shared.rs
src/wasm/stream/: io.rs  mod.rs
