[package]
name = "async-wsocket"
version = "0.14.0"
edition = "2021"
description = "A convenience library for using websockets both in native and WASM environments!"
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>"]
homepage = "https://github.com/yukibtc/async-wsocket"
repository = "https://github.com/yukibtc/async-wsocket.git"
license = "MIT"
readme = "README.md"
categories = ["asynchronous", "network-programming", "api-bindings", "wasm", "web-programming::websocket"]
keywords = ["async", "tokio", "wasm", "websocket"]

[features]
default = []
socks = ["dep:tokio-socks"]

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
url = { version = "2.5", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["net"] }
tokio-happy-eyeballs = "0.1"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] } # Required to enable the necessary features for tokio-tungstenite
tokio-socks = { version = "0.5", optional = true }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures = { version = "0.3", default-features = false, features = ["std"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["BinaryType", "Blob", "CloseEvent", "ErrorEvent", "MessageEvent", "DomException", "WebSocket"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "client"
